--- a/hackathon.html
+++ b/hackathon.html
@@ -116,15 +116,15 @@ The world is facing vast problems that needs to be tackled for the development o
 3. Problem statements will be published by 8th April on the website.<br>
 4. The participants will have to analyse, innovate and improvise and come up with the website/application along with a <b>brief presentation</b> that will help to tackle a problem.<br>
 5. You can also come up with your self innovation that will help in dealing problems existing in the current scenario.<br>
-6. The presentation required in the round 1 should include the basic ideas, solutions and screenshots website/app.<br>
-7. The submissions for round 1 will be through a github link ( with their presentation attached in it)<br>
+6. The presentation required in the round 1 should include the basic ideas, solutions and screenshots of website/app.<br>
+7. The submissions for round 1 will be through a github link ( with their presentation attached)<br>
 8. The participants are required to mail their github links by 18th of April on <i><font color="blue">registration@ecellhbtu.in </font></i><br>
 9. List of shortlisted candidates will be uploaded on the website by 19th April 9:00pm.<br>
 <br><br><b>Round 2:</b> <br>
 <b>Venue:</b> CSE Seminar Hall<br><b>
 Date:</b> 20 April, 2019
 <br><br>
-1. Shortlisted candidates have to report at the given venue on 20th April TIME- .<br>
+1. Shortlisted candidates have to report at the given venue on 20th April  .<br>
 2. Shortlisted candidates will have to come with their website/app and with a <b>detailed presentation</b> and present before the judging panel.<br>
 <br>
 <br><b>
