--- a/pitch.html
+++ b/pitch.html
@@ -140,7 +140,10 @@ E-SUMMIT, HBTU KANPUR.
 <br><br>
 <b>
 ●	VENUE -</b>  Electrical Engineering Department.
-
+<br><br>CONTACTS:- </b><br>
+<br>Ayush Kumar  -                                    9044467841
+<br>Dhruv Kaul-	 		   7704901919
+<br>Kshitiz Pachaury -9628461474	
 			</div>
 		   
 
