--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@ $(document).ready(function(){
 							 <div class="row">
                 <div class="col-12">
                     <div class="load-more-btn text-center mt-70">
-                        <a href="#" class="btn oneMusic-btn" onclick = "event7_registration()">Register<i class="fa fa-angle-double-right"></i></a>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfU5lj9Eweusl8niwnyHjhUn5TXInamD2a4rq-_GR1t8__EYA/viewform?usp=sf_link" class="btn oneMusic-btn" onclick = "event7_registration()">Register<i class="fa fa-angle-double-right"></i></a>
                     </div>
                 </div>
             </div>
