--- a/Iid.html
+++ b/Iid.html
@@ -108,12 +108,15 @@
 						<font size="5" style="font-family: 'Kanit', sans-serif;">
 						<center>(Solo and Group Event)</center>
 <b>Description:</b> <br> 
-In a world full of challenges and problems that need to be urgently addressed, innovation is what makes it possible to come up with solutions that will benefit the maximum number of users and such innovation is often enabled by design.
-Do you think you are creative?? Do you think you can revolutionize a product??<br>
-If yes here is your chance to show your talent capability.<br>
-This event is for those who are curious to explore the world in a different perspective and ready to change it accordingly.<br><br>
-<b>
-Items to Innovative:</b>
+<br>
+In a world full of challenges and emergent problems, innovation makes it possible to come up with solutions of enormous benefits for maximum users and such innovation is often enabled by design.
+            <br><br><center><b><i>   “Design is thinking for improvement ,forever” </b></i></center><br><br>
+Do you think you are creative enough?? Do you think you can revolutionize a product?? If yes here is your chance to show your talent capability.
+This event is for those who are curious to explore the world in a different perspective and ready to change it accordingly as true innovation is coming up with a product that customer don’t even know they needed.
+Innovative design thinkers maybe in short supply, but they exist inside every organisation. This event is basically a trick to spot them, support them and expose them to various investors and venture capitalists.
+<br><br><b>Event Structure: </b>
+<br> The team/Individual need to select the item they want to innovate at the time of registration only. Below are some of the examples of the items-    
+<br>Items to Innovate:
 <br>•	Charger
 <br>•	Bags
 <br>•	Bed
@@ -121,24 +124,41 @@ Items to Innovative:</b>
 <br>•	Lightbulb
 <br>•	Automobile Key
 <br>•	Ship’s Anchor
-<br><br><b>
-General Rules:</b><br>
-<br>•	Solo and Group Event. 
-<br>•	Team can have maximum of 5 members.
+<br>•	Others(only from existing products out there).
+<br><br>
+<b> Round:</b>
+<br>	It is a one round event. Candidates are required to present their design(can be of any form like model, PPT, Hand Drawn, Drafting, CAD etc.)  at E-SUMMIT’19 in front of our panel of judges. 
+<br>	Candidates have to submit all the design images of product choosen and texts provided with them (Abstract, description/functionality, application, material used, product name).
+<br>	Maximum of 10 minutes will be given to each team so be precise and accurate with the idea presentation.
+<br><br><b>General Rules And Guidelines:</b>
+<br>•	It is both a Solo and Group Event. 
+<br>•	The Team can have maximum of 5 members.
 <br>•	Design must be original.
 <br>•	Replacing any team members is not allowed after registration.
 <br>•	Your design must be feasible, economically sustainable, social and environmental responsible, aesthetic and distinct from original.
-<br>•	Any number of Projects can be undertaken
-<br><br><b>Judging Criteria:</b>
+<br>•	Any number of Projects can be undertaken.
+<br>•	All participants are required to be present with their college IDs at the time of participation.
+<br>•	IMPORTANT: Candidates need to bring their own laptops for presentation if required.
+
+<br><b>Judging Criteria:</b>
 <br>•	Degree of Innovation
 <br>•	Degree of distinction
 <br>•	Aesthetics
 <br>•	Economic Sustainability
 <br>•	Social and Environmental Responsibility
 <br>•	Functionality
-<br><br><b>Submission Requirements:
-</b><br>•   Submit all the images related to your Projects (Hand Drawn, Drafting, CAD etc.)
-<br>•	All texts provided with your images (Abstract, description/functionality, application, material used, product name).
+<br><b>
+Eligibility:</b> Students from any college can participate in the competition.
+<br>Entries of  the original  work is only allowed to participate.
+<br><br>		
+<b>Venue:</b> Civil Department Hall
+<br><br>
+<b>
+
+Contacts:</b>
+<br>
+Prachi Agarwal:  +91-8574974184
+<br>Aviral Verma:  +91-8318055410
 
 
 		</font>
