--- a/hackathon.html
+++ b/hackathon.html
@@ -121,7 +121,7 @@ The world is facing vast problems that needs to be tackled for the development o
 8. The participants are required to mail their github links by 18th of April on <i><font color="blue">registration@ecellhbtu.in </font></i><br>
 9. List of shortlisted candidates will be uploaded on the website by 19th April 9:00pm.<br>
 <br><br><b>Round 2:</b> <br>
-<b>Venue:</b> CSE Seminar Hall<br><b>
+<b>Venue:</b> Incubation Centre<br><b>
 Date:</b> 20 April, 2019
 <br><br>
 1. Shortlisted candidates have to report at the given venue on 20th April  .<br>
