--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@ $(document).ready(function(){
 							 <div class="row">
                 <div class="col-12">
                     <div class="load-more-btn text-center mt-70">
-                        <a href="https://forms.gle/9rALkwYVNMBNzvYz8" class="btn oneMusic-btn" onclick = "event1_registration()">Register <i class="fa fa-angle-double-right"></i></a>
+                        <a href="https://forms.gle/9rALkwYVNMBNzvYz8" class="btn oneMusic-btn" id="event1" onclick = "event1_registration()">Register <i class="fa fa-angle-double-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -503,7 +503,7 @@ $(document).ready(function(){
 							 <div class="row">
                 <div class="col-12">
                     <div class="load-more-btn text-center mt-70">
-                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSet72Ycfetx1CXxjfi_khEhITC_A3swy8Qijss1WaKaJ57oRw/viewform?vc=0&c=0&w=1" class="btn oneMusic-btn" onclick = "event2_registration()">Register<i class="fa fa-angle-double-right"></i></a>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSet72Ycfetx1CXxjfi_khEhITC_A3swy8Qijss1WaKaJ57oRw/viewform?vc=0&c=0&w=1" class="btn oneMusic-btn" id="event2" onclick = "event2_registration()">Register<i class="fa fa-angle-double-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -524,7 +524,7 @@ $(document).ready(function(){
 							 <div class="row">
                 <div class="col-12">
                     <div class="load-more-btn text-center mt-70">
-                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeGqbrzdFvuDgjv5jj7kAwxRVluf9EH5F_0GI12gLxaIeWxig/viewform?vc=0&c=0&w=1" class="btn oneMusic-btn" onclick = "event3_registration()">Register<i class="fa fa-angle-double-right"></i></a>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeGqbrzdFvuDgjv5jj7kAwxRVluf9EH5F_0GI12gLxaIeWxig/viewform?vc=0&c=0&w=1" class="btn oneMusic-btn" id="event3" onclick = "event3_registration()">Register<i class="fa fa-angle-double-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -545,7 +545,7 @@ $(document).ready(function(){
 							 <div class="row">
                 <div class="col-12">
                     <div class="load-more-btn text-center mt-70">
-                        <a href="got.html" class="btn oneMusic-btn" onclick = "event4_registration()">Register<i class="fa fa-angle-double-right"></i></a>
+                        <a href="got.html" class="btn oneMusic-btn" id="event4" onclick = "event4_registration()">Register<i class="fa fa-angle-double-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -566,7 +566,7 @@ $(document).ready(function(){
 							 <div class="row">
                 <div class="col-12">
                     <div class="load-more-btn text-center mt-70">
-                        <a href="	https://docs.google.com/forms/d/e/1FAIpQLSfgn2GgB38A5VEiU0qGp_C0pN3M8wxdrbx8qRapoQI0FBC4LQ/viewform?usp=sf_link" class="btn oneMusic-btn" onclick = "event6_registration()">Register<i class="fa fa-angle-double-right"></i></a>
+                        <a href="	https://docs.google.com/forms/d/e/1FAIpQLSfgn2GgB38A5VEiU0qGp_C0pN3M8wxdrbx8qRapoQI0FBC4LQ/viewform?usp=sf_link" class="btn oneMusic-btn" id="event5" onclick = "event6_registration()">Register<i class="fa fa-angle-double-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -587,7 +587,7 @@ $(document).ready(function(){
 							 <div class="row">
                 <div class="col-12">
                     <div class="load-more-btn text-center mt-70">
-                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfnNKNwhiLUpmnLguyu1s5Q9BIMaftRtqCRTp4T_tDQQ-OCZQ/viewform?vc=0&c=0&w=1" class="btn oneMusic-btn" onclick = "event5_registration()">Register<i class="fa fa-angle-double-right"></i></a>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfnNKNwhiLUpmnLguyu1s5Q9BIMaftRtqCRTp4T_tDQQ-OCZQ/viewform?vc=0&c=0&w=1" class="btn oneMusic-btn" id="event6" onclick = "event5_registration()">Register<i class="fa fa-angle-double-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -608,7 +608,7 @@ $(document).ready(function(){
 							 <div class="row">
                 <div class="col-12">
                     <div class="load-more-btn text-center mt-70">
-                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfU5lj9Eweusl8niwnyHjhUn5TXInamD2a4rq-_GR1t8__EYA/viewform?usp=sf_link" class="btn oneMusic-btn" onclick = "event7_registration()">Register<i class="fa fa-angle-double-right"></i></a>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfU5lj9Eweusl8niwnyHjhUn5TXInamD2a4rq-_GR1t8__EYA/viewform?usp=sf_link" class="btn oneMusic-btn" id="event7" onclick = "event7_registration()">Register<i class="fa fa-angle-double-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -629,7 +629,7 @@ $(document).ready(function(){
 							 <div class="row">
                 <div class="col-12">
                     <div class="load-more-btn text-center mt-70">
-                        <a href="https://docs.google.com/forms/d/e/1FAIpQLScKbVN7VFbuilTzaU96lawvpWyb-VEqLP52_PcGPZloKZneKA/viewform" class="btn oneMusic-btn" onclick = "event8_registration()">Register<i class="fa fa-angle-double-right"></i></a>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLScKbVN7VFbuilTzaU96lawvpWyb-VEqLP52_PcGPZloKZneKA/viewform" class="btn oneMusic-btn" id="event8" onclick = "event8_registration()">Register<i class="fa fa-angle-double-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -650,7 +650,7 @@ $(document).ready(function(){
 							 <div class="row">
                 <div class="col-12">
                     <div class="load-more-btn text-center mt-70">
-                        <a href="" class="btn oneMusic-btn" onclick = "event9_registration()">Register<i class="fa fa-angle-double-right"></i></a>
+                        <a href="" class="btn oneMusic-btn" id="event9" onclick = "event9_registration()">Register<i class="fa fa-angle-double-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -672,7 +672,7 @@ $(document).ready(function(){
 							 <div class="row">
                 <div class="col-12">
                     <div class="load-more-btn text-center mt-70">
-                        <a href="pubg.html" class="btn oneMusic-btn" onclick = "event4_registration()">Register<i class="fa fa-angle-double-right"></i></a>
+                        <a href="pubg.html" class="btn oneMusic-btn" id="event10" onclick = "event4_registration()">Register<i class="fa fa-angle-double-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -693,7 +693,7 @@ $(document).ready(function(){
 							 <div class="row">
                 <div class="col-12">
                     <div class="load-more-btn text-center mt-70">
-                        <a href="got.html" class="btn oneMusic-btn" onclick = "event4_registration()">Register<i class="fa fa-angle-double-right"></i></a>
+                        <a href="got.html" class="btn oneMusic-btn" id="event11" onclick = "event4_registration()">Register<i class="fa fa-angle-double-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -712,7 +712,7 @@ $(document).ready(function(){
 							 <div class="row">
                 <div class="col-12">
                     <div class="load-more-btn text-center mt-70">
-                        <a href="got.html" class="btn oneMusic-btn" onclick = "event4_registration()">Register<i class="fa fa-angle-double-right"></i></a>
+                        <a href="got.html" class="btn oneMusic-btn" id="event12" onclick = "event4_registration()">Register<i class="fa fa-angle-double-right"></i></a>
                     </div>
                 </div>
             </div>
