--- a/team.html
+++ b/team.html
@@ -309,12 +309,12 @@ button:hover, a:hover {
     <section class="breadcumb-area bg-img bg-overlay" style="background-image: url(img/bg-img/team.png);">
         <div class="bradcumbContent">
             <p></p>
-            <h2><font style="font-family: 'Audiowide', cursive;">O U R &nbsp;  T E A M </font></h2>
+            <h2><font style="font-family: 'Raleway'">O U R &nbsp;  T E A M </font></h2>
         </div>
     </section>
     <!-- ##### Breadcumb Area End ##### -->
 
-	</a></li><marquee behavior="scroll" direction="left"><a href="index.html#register"><font size="5" style="font-family: 'Raleway', sans-serif;"><span class="blinking1"><u>E- Summit 2019 registrations will begin soon.... Stay Tuned!</u></span></a></font></marquee>
+	</a></li
 	
     <!-- ##### Contact Area Start ##### -->
     <section class="contact-area section-padding-100-0">
