--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ $(document).ready(function(){
                 <div class="col-12 col-sm-6 col-md-4 col-lg-2">
                     <div class="single-album-area wow fadeInUp" data-wow-delay="200ms">
                         <div class="album-thumb">
-                            <img src="imgs/sikka.jpg" class="avatar"  style="border-radius: 50%; alt="">
+                            <img src="imgs/sikka.jpg" class="avatar"  style="border-radius: 50%;" alt="">
                         </div>
                         <div class="album-info">
                             <a href="#">
