--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@ $(document).ready(function(){
                        <h2><font size="8" style="font-family: 'Raleway';">EVENTS</font></h2>
 						<br>
 						<br>
-						<h3>Note: You need to first <a href="login.html"><font color="#d23333">login/sign up</a></font>  for registering in any of the following events.</h3></div>
+						<h3>Note: You need to first login/sign up  for registering in any of the following events.</h3></div>
 						
                     </div>
                 </div>
@@ -548,7 +548,7 @@ $(document).ready(function(){
 							 <div class="row">
                 <div class="col-12">
                     <div class="load-more-btn text-center mt-70">
-                        <a href="#" class="btn oneMusic-btn" id="event4" onclick = "event4_registration()">Register<i class="fa fa-angle-double-right"></i></a>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfZ01jAi8Xqx0Tu6gQ-eQB8668oR0BKrO04_CpqG7ZiTIydOQ/viewform?usp=sf_link" class="btn oneMusic-btn" id="event4" onclick = "event4_registration()">Register<i class="fa fa-angle-double-right"></i></a>
                     </div>
                 </div>
             </div>
