--- a/biz.html
+++ b/biz.html
@@ -87,7 +87,7 @@
     <!-- ##### Header Area End ##### -->
 
     <!-- ##### Breadcumb Area Start ##### -->
-    <section class="breadcumb-area bg-img bg-overlay" style="background-image: url(imgs/biz.jpeg);">
+    <section class="breadcumb-area bg-img bg-overlay" style="background-image: url(imgs/biz.jpg);">
         <div class="bradcumbContent">
             <h5><font size="8" style="font-family: 'Lora';">B I Z &nbsp;  Q U I Z</font></h5>
                     </div>
