--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@ $(document).ready(function(){
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-event-area mb-30">
                         <div class="event-thumbnail">
-                            <img src="imgs/biz.jpeg" alt="biz quiz">
+                            <img src="imgs/biz.jpg" alt="biz quiz">
                         </div>
                         <div class="event-text">
                             <h4>BIZ QUIZ</h4>
@@ -539,7 +539,7 @@ $(document).ready(function(){
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-event-area mb-30">
                         <div class="event-thumbnail">
-                            <img src="imgs/got.png" alt="Game of thrones">
+                            <img src="imgs/got.jpg" alt="Game of thrones">
                         </div>
                         <div class="event-text">
                             <h4>GAME OF THRONES</h4>
@@ -560,7 +560,7 @@ $(document).ready(function(){
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-event-area mb-30">
                         <div class="event-thumbnail">
-                            <img src="imgs/buc.jpeg" alt="Politicks">
+                            <img src="imgs/buc1.jpg" alt="Politicks">
                         </div>
                         <div class="event-text">
                             <h4>BUILD YOUR COMPANY</h4>
@@ -602,7 +602,7 @@ $(document).ready(function(){
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-event-area mb-30">
                         <div class="event-thumbnail">
-                            <img src="imgs/pitch.jpeg" alt="pitch please!">
+                            <img src="imgs/pitch.jpg" alt="pitch please!">
                         </div>
                         <div class="event-text">
                             <h4>PITCH PLEASE!</h4>
@@ -644,7 +644,7 @@ $(document).ready(function(){
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-event-area mb-30">
                         <div class="event-thumbnail">
-                            <img src="imgs/ipl.jpeg" alt="ipl auction">
+                            <img src="imgs/ipl.jpg" alt="ipl auction">
                         </div>
                         <div class="event-text">
                             <h4>IPL AUCTION</h4>
@@ -666,7 +666,7 @@ $(document).ready(function(){
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-event-area mb-30">
                         <div class="event-thumbnail">
-                            <img src="imgs/download.jpg" alt="Game of thrones">
+                            <img src="imgs/pubg.jpg" alt="Game of thrones">
                         </div>
                         <div class="event-text">
                             <h4>PUBG LIVE</h4>
@@ -687,7 +687,7 @@ $(document).ready(function(){
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-event-area mb-30">
                         <div class="event-thumbnail">
-                            <img src="imgs/pivot.jpeg" alt="Game of thrones">
+                            <img src="imgs/pivot.jpg" alt="Game of thrones">
                         </div>
                         <div class="event-text">
                             <h4>PIVOT</h4>
@@ -706,7 +706,7 @@ $(document).ready(function(){
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-event-area mb-30">
                         <div class="event-thumbnail">
-                            <img src="imgs/download.jpg" alt="Game of thrones">
+                            <img src="imgs/iid.jpg" alt="Game of thrones">
                         </div>
                         <div class="event-text">
                             <h4>INNOVATION IN DESIGN</h4>
