--- a/got.html
+++ b/got.html
@@ -87,7 +87,7 @@
     <!-- ##### Header Area End ##### -->
 
     <!-- ##### Breadcumb Area Start ##### -->
-    <section class="breadcumb-area bg-img bg-overlay" style="background-image: url(imgs/got.png);">
+    <section class="breadcumb-area bg-img bg-overlay" style="background-image: url(imgs/got.jpg);">
         <div class="bradcumbContent">
             <h5><font size="8" style="font-family: 'Audiowide', cursive;">GAME &nbsp; OF &nbsp; THRONES</font></h5>
                     </div>
