--- a/ipl.html
+++ b/ipl.html
@@ -87,7 +87,7 @@
     <!-- ##### Header Area End ##### -->
 
     <!-- ##### Breadcumb Area Start ##### -->
-    <section class="breadcumb-area bg-img bg-overlay" style="background-image: url(imgs/ipl.jpeg);">
+    <section class="breadcumb-area bg-img bg-overlay" style="background-image: url(imgs/ipl.jpg);">
         <div class="bradcumbContent">
             <h5><font size="8" style="font-family: 'Audiowide', cursive;">IPL &nbsp; AUCTION</font></h5>
                     </div>
