--- a/pivot.html
+++ b/pivot.html
@@ -87,7 +87,7 @@
     <!-- ##### Header Area End ##### -->
 
     <!-- ##### Breadcumb Area Start ##### -->
-    <section class="breadcumb-area bg-img bg-overlay" style="background-image: url(imgs/PM.png);">
+    <section class="breadcumb-area bg-img bg-overlay" style="background-image: url(imgs/pivot.jpg);">
         <div class="bradcumbContent">
             <h5><font size="8" style="font-family: 'Audiowide', cursive;">PIVOT</font></h5>
                     </div>
