--- a/poli.html
+++ b/poli.html
@@ -87,7 +87,7 @@
     <!-- ##### Header Area End ##### -->
 
     <!-- ##### Breadcumb Area Start ##### -->
-    <section class="breadcumb-area bg-img bg-overlay" style="background-image: url(imgs/PM.png);">
+    <section class="breadcumb-area bg-img bg-overlay" style="background-image: url(imgs/buc1.jpg);">
         <div class="bradcumbContent">
             <h5><font size="8" style="font-family: 'Audiowide', cursive;">BUILD YOUR COMPANY</font></h5>
                     </div>
