--- a/index.html
+++ b/index.html
@@ -291,13 +291,13 @@ $(document).ready(function(){
                 <div class="col-12 col-sm-6 col-md-4 col-lg-2">
                     <div class="single-album-area wow fadeInUp" data-wow-delay="300ms">
                         <div class="album-thumb">
-                            <img src="imgs/dw.jpg" class="avatar"  style="border-radius: 50%; alt="">
+                            <img src="imgs/ram.jpeg" class="avatar"  style="border-radius: 50%; alt="">
                         </div>
                         <div class="album-info">
                             <a href="#">
-                                <h5><font color="#fff">Pushpendra Dwivedi</font></h5>
+                                <h5><font color="#fff">Dr. J Ramkumar</font></h5>
                             </a>
-                            <p><font color="#D23333"> Owner, Barrownz Groupss</font></p>
+                            <p><font color="#D23333"> Professor, IIT Kanpur| Design thinking specialist</font></p>
                         </div>
                     </div>
                 </div>
@@ -402,13 +402,13 @@ $(document).ready(function(){
                 <div class="col-12 col-sm-6 col-md-4 col-lg-2">
                     <div class="single-album-area wow fadeInUp" data-wow-delay="400ms">
                         <div class="album-thumb">
-                            <img src="imgs/beer.jpg" class="avatar"  style="border-radius: 50%; alt="">
+                            <img src="imgs/jogesh.jpeg" class="avatar"  style="border-radius: 50%; alt="">
                         </div>
                         <div class="album-info">
                             <a href="#">
-                                <h5><font color="#fff">Ranveer Allahabadia</font></h5>
+                                <h5><font color="#fff">Jogesh Jain</font></h5>
                             </a>
-                            <p><font color="#D23333">Beer Biceps, YouTube</font></p>
+                            <p><font color="#D23333">India's First Employability Coach</font></p>
                         </div>
                     </div>
                 </div>
@@ -417,13 +417,13 @@ $(document).ready(function(){
                 <div class="col-12 col-sm-6 col-md-4 col-lg-2">
                     <div class="single-album-area wow fadeInUp" data-wow-delay="500ms">
                         <div class="album-thumb">
-                            <img src="imgs/akansha.jpg" class="avatar"  style="border-radius: 50%; alt="">
+                            <img src="imgs/shalini.jpeg" class="avatar"  style="border-radius: 50%; alt="">
                         </div>
                         <div class="album-info">
                             <a href="#">
-                                <h5><font color="#fff">Akansha Sharma</font></h5>
+                                <h5><font color="#fff">Shalini Sankar</font></h5>
                             </a>
-                            <p><font color="#D23333">iOS Developer</font></p>
+                            <p><font color="#D23333">Women Excellence Award in Corporate Leadership-2019| Top 25 Influential Women-2017</font></p>
                         </div>
                     </div>
                 </div>
@@ -432,13 +432,13 @@ $(document).ready(function(){
                 <div class="col-12 col-sm-6 col-md-4 col-lg-2">
                     <div class="single-album-area wow fadeInUp" data-wow-delay="600ms">
                         <div class="album-thumb">
-                            <img src="imgs/karsanbhai.jpg" class="avatar"  style="border-radius: 50%; alt="">
+                            <img src="imgs/ravinder.jpeg" class="avatar"  style="border-radius: 50%; alt="">
                         </div>
                         <div class="album-info">
                             <a href="#">
-                                <h5><font color="#fff">Karsanbhai Patel</font></h5>
+                                <h5><font color="#fff">Ravinder Bhan</font></h5>
                             </a>
-                            <p><font color="#D23333">Founder, NIRMA</font></p>
+                            <p><font color="#D23333">CEO, TPS Management Consultants | Senior Advisor and Board Member, India SME Forum</font></p>
                         </div>
                     </div>
                 </div>
