--- a/index.html
+++ b/index.html
@@ -443,6 +443,19 @@ $(document).ready(function(){
                     </div>
                 </div>
 
+				<div class="col-12 col-sm-6 col-md-4 col-lg-2">
+                    <div class="single-album-area wow fadeInUp" data-wow-delay="200ms">
+                        <div class="album-thumb">
+                            <img src="imgs/jugal.jpeg" class="avatar"  style="border-radius: 50%; alt="">
+                        </div>
+                        <div class="album-info">
+                            <a href="#">
+                                <h5><font color="#fff">Jugal Wadhwai</font></h5>
+                            </a>
+                            <p><font color="#D23333">Content Marketing Expert| Consumer Psychology Expert</font></p>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             
